Modify to specify the alpine-1 tag

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - db-data:/data/db
 
   authentiq:
-    image: sayid/authentiq:1.0
+    image: sayid/authentiq:alpine-1
     depends_on:
       - db
     restart: unless-stopped
