--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,9 @@
 node_modules
+hooks
 npm-debug.log
 Dockerfile
 docker-compose.yml
 InsomniaRequestsExport.json
 logo.png
+.gitignore
 .dockerignore
