Parameterize authentiq-db version, improve .env

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# Authentiq Configuration Template
+####################################
+# Authentiq Configuration Template #
+####################################
 #
 # Notes:
 #   - Do NOT use quotes or double quotes!
@@ -7,12 +9,6 @@
 #   - To use this with `Docker swarm` use `docker-compose config` a as pre-processor:
 #       -> docker stack deploy -c <(docker-compose config) YOUR_STACK_NAME
 
-# (Optional)
-# Application Environment - Modify this only for debugging and development
-# Defaults to:
-#   -> production
-AUTHENTIQ_ENV=
-
 # Required
 # Defaults to:
 #   -> AUTHENTIQ_VERSION=alpine-1
@@ -20,12 +16,11 @@ AUTHENTIQ_ENV=
 AUTHENTIQ_VERSION=
 AUTHENTIQ_PORT=
 
-# (Optional) 
-# Super ADMIN credentials
-# Defauls to:
-#   -> admin@authentiq.com:admin1234
-AUTHENTIQ_ADMIN_USERNAME=
-AUTHENTIQ_ADMIN_PASSWORD=
+# (Optional)
+# Application Environment - Modify this only for debugging and development
+# Defaults to:
+#   -> production
+AUTHENTIQ_ENV=
 
 # (Optional)
 # Domain that links are built on
@@ -33,6 +28,19 @@ AUTHENTIQ_ADMIN_PASSWORD=
 #   -> http://AUTHENTIQ_HOST:AUTHENTIQ_PORT
 # Required for "Verify User" and "Forgot Password" features
 AUTHENTIQ_DOMAIN=
+
+# Required
+# Authentiq Database image tag
+# Defaults to:
+#   -> alpine
+AUTHENTIQ_DB_VERSION=
+
+# Required
+# Super ADMIN credentials
+# Defauls to:
+#   -> admin@authentiq.com:admin1234
+AUTHENTIQ_ADMIN_USERNAME=
+AUTHENTIQ_ADMIN_PASSWORD=
 
 # (Optional)
 # SMTP Configuration
