--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - ${AUTHENTIQ_PORT:-2052}:2000
     environment:
-      NODE_ENV: ${AUTHENTIQ_ENV-:production}
+      NODE_ENV: ${AUTHENTIQ_ENV:-production}
       AUTHENTIQ_DOMAIN: ${AUTHENTIQ_DOMAIN}
       AUTHENTIQ_DB_HOST: authentiq-db
       AUTHENTIQ_DB_PORT: 27017
