--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.4.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "underscore": "^1.9.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
