--- a/hooks/build
+++ b/hooks/build
@@ -6,7 +6,7 @@ source hooks/.config
 
 echo "✅ Update qemu to avoid \"Unsupported syscal\" in npm package installation"
 echo "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
-PACKAGE=http://ftp.de.debian.org/debian/pool/main/q/qemu/qemu-user-static_4.2-1_amd64.deb
+PACKAGE=http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_4.2-3_amd64.deb
 mkdir tmp/
 cd tmp/
 curl $PACKAGE -o $(basename ${PACKAGE})
